# amalitechairflowdbtlab

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
dags/: flight_price_analysis_pipeline.py  load_flight_data_to_mysql.py  welcome.py
